# bug-agent

./: .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
bugagent/: claim.py  cli.py  config.py  db.py  resolve.py  runner.py  verify.py  watcher.py
prompts/: fix_issue.md
tests/integration/: test_full_cycle.py
tests/unit/: test_claim.py  test_config.py  test_db.py  test_resolve.py  test_runner.py  test_verify.py
